# sornaris

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  scorecard.yml
examples/: 01_find_prompt_regression.py  02_multi_axis.py  README.md  eval.jsonl  prompt_versions.jsonl
src/sornaris/: __init__.py  cache.py  cli.py  models.py  multi.py  providers.py  runner.py  scoring.py  search.py
tests/: test_cache.py  test_cli.py  test_models.py  test_multi.py  test_providers.py  test_runner.py  test_scoring.py  test_search.py
